<resources>

    <string name="app_name">Numerical Analysis</string>
    <string name="hello_world">Hello world!</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_plot">Plot</string>
    <string name="menu_execution">View Execution</string>
    <string name="menu_set_independent_terms">Set Independent Terms</string>
    <string name="menu_set_x_and_fx">Set X And F(X)</string>
    <string name="menu_set_function">Set Function</string>
    <string name="menu_input_matrix">Input Matrix</string>
    <string name="menu_help">Help</string>
    <string name="invalid_parameters">You have to enter all the values for the method to be executed</string>
    <string name="missing_fields">Please enter the field before you press the button</string>
    <string name="image_activity_topic_list">Image Android Teacher</string>
    <string name="instruction_activity_topic_list">Touch to start</string>
    <string name="button_set_activity_set_function">Set</string>
    <string name="button_set_activity_input_matrix">Set</string>
    <string name="button_simple">Simple</string>
    <string name="button_double">Double</string>
    <string name="button_execution_table">Execution Table</string>
    <string name="button_matrix_execution">Show Execution</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_finish_activity_input_matrix">Finish</string>
    <string name="button_next_activity_input_matrix">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_partial_pivoting">Partial Pivoting</string>
    <string name="button_total_pivoting">Total Pivoting</string>
    <string name="button_crout">Crout</string>
    <string name="button_cholesky">Cholesky</string>
    <string name="button_doolittle">Doolittle</string>
    <string name="text_view_smallest_positive_number">Smallest Positive Number</string>
    <string name="text_view_machine_epsilon">Machine Epsilon</string>
    <string name="text_view_current_matrix_field_activity_input_matrix">Please enter A11</string>
    <string name="text_view_matrix_size_activity_input_matrix">Please enter n</string>
    <string name="text_view_result">Result: </string>
    <string name="text_view_execution_activity_matrix_execution">Execution: </string>
    <string name="text_view_input_vector_activity_input_matrix">Please enter b1: </string>
    <string name="text_view_enter_n">Please enter n</string>
    <string name="text_view_warning_iterative_methods">Please enter the independent terms before using this method, this can be done through the menu</string>
    <string name="text_view_warning_interpolation">Please enter x and f(x) before using this method, this can be done through the menu</string>
    <string name="text_view_warning_one_variable_equations">Please enter the function before using this method, this can be done through the menu</string>
    <string name="text_view_warning_input_matrix">Please enter a matrix before you use any method, this can be done through the menu</string>
    <string name="hint_edit_text_function_activity_set_fuction">Insert the function</string>
    <string name="hint_text_view_result">Result</string>
    <string name="hint_edit_text_x0">X0</string>
    <string name="hint_edit_text_x1">X1</string>
    <string name="hint_edit_text_delta">Delta</string>
    <string name="hint_edit_text_iterations">Iterations</string>
    <string name="hint_edit_text_tolerance">Tolerance</string>
    <string name="hint_edit_text_g">G(x)</string>
    <string name="hint_edit_text_df">F\'(X0)</string>
    <string name="hint_edit_text_ddf">F\'\'(X0)</string>
    <string name="hint_edit_text_relaxation">Relaxation</string>
    <string name="hint_edit_text_matrix_field_activity_input_matrix">A[i][j]</string>
    <string name="hint_edit_text_input_vector_activity_input_matrix">b[i]</string>
    <string name="hint_edit_text_matrix_size_activity_input_matrix">Matrix size -> "n"</string>
    <string name="title_activity_one_variable_equations">One Variable Equations</string>
    <string name="title_activity_set_function">Set Function</string>
    <string name="title_activity_incremental_search">Incremental Search</string>
    <string name="title_activity_bisection">Bisection</string>
    <string name="title_activity_false_rule">False Rule</string>
    <string name="title_activity_fixed_point">Fixed Point</string>
    <string name="title_activity_newton">Newton</string>
    <string name="title_activity_secant">Secant</string>
    <string name="title_activity_error_theory">Error Theory</string>
    <string name="title_activity_execution_table">Execution Table</string>
    <string name="title_activity_multiple_roots">Multiple Roots</string>
    <string name="title_activity_plotter">Plotter</string>
    <string name="title_activity_direct_methods">Direct Methods</string>
    <string name="title_activity_systems_of_equations">Systems Of Equations</string>
    <string name="title_activity_input_matrix">Input Matrix</string>
    <string name="title_activity_simple_gaussian_elimination">Simple Gaussian Elimination</string>
    <string name="title_activity_iterative_methods">Iterative Methods</string>
    <string name="title_activity_set_independent_terms">Set Independent Terms</string>
    <string name="title_activity_jacobi">Jacobi</string>
    <string name="title_activity_matrix_execution">Matrix Execution</string>
    <string name="title_activity_gauss_seidel">Gauss Seidel</string>
    <string name="title_activity_interpolation">Interpolation</string>
    <string name="title_activity_newton_interpolation">Newton Interpolation</string>
    <string name="title_activity_set_xand_fx">Set X And F(X)</string>
    <string name="title_activity_direct_matrix_factorization">Direct Matrix Factorization</string>
    <string name="title_activity_lumatrix_factorization">LU Matrix Factorization</string>
    <string name="title_activity_lumatrix_factorization_with_partial_pivoting">LU Matrix Factorization with Partial Pivoting</string>
    <string name="title_activity_lagrange">Lagrange</string>
    <string name="title_activity_neville">Neville</string>
    <string name="title_activity_help">Help</string>
    <string name="title_table_iteration">Iteration</string>
    <string name="title_table_x0">X0</string>
    <string name="title_table_x1">X1</string>
    <string name="title_table_xm">XM</string>
    <string name="title_table_y0">F(X0)</string>
    <string name="title_table_y1">F(X1)</string>
    <string name="title_table_ym">F(XM)</string>
    <string name="title_table_error">Error</string>
    <string name="title_table_dy0">F\'(X0)</string>
    <string name="title_table_ddy0">F\'\'(X0)</string>

</resources>