<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewIterationRowNewton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_table_iteration" />

    <TextView
        android:id="@+id/textViewX0RowNewton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/title_table_x0" />

    <TextView
        android:id="@+id/textViewY0RowNewton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/title_table_y0" />

    <TextView
        android:id="@+id/textViewDY0RowNewton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/title_table_dy0" />

    <TextView
        android:id="@+id/textViewErrorRowNewton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/title_table_error" />

</TableRow>