<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="false" >

    <EditText
        android:id="@+id/editTextInputVectorActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textViewCurrentMatrixFieldActivityInputMatrix"
        android:ems="10"
        android:hint="@string/hint_edit_text_input_vector_activity_input_matrix"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:id="@+id/textViewInputVectorActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextInputVectorActivityInputMatrix"
        android:layout_marginRight="42dp"
        android:layout_toLeftOf="@+id/editTextInputVectorActivityInputMatrix"
        android:text="@string/text_view_input_vector_activity_input_matrix" />

    <EditText
        android:id="@+id/editTextMatrixFieldActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCurrentMatrixFieldActivityInputMatrix"
        android:layout_below="@+id/textViewCurrentMatrixFieldActivityInputMatrix"
        android:ems="10"
        android:hint="@string/hint_edit_text_matrix_field_activity_input_matrix"
        android:inputType="numberDecimal|numberSigned" />

    <GridView
        android:id="@+id/gridViewActivityInputMatrix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textViewInputVectorActivityInputMatrix"
        android:layout_below="@id/editTextMatrixFieldActivityInputMatrix"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="horizontal|vertical"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:visibility="visible" >
    </GridView>

    <EditText
        android:id="@+id/editTextMatrixSizeActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_edit_text_matrix_size_activity_input_matrix"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSetActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextMatrixSizeActivityInputMatrix"
        android:layout_toRightOf="@+id/editTextMatrixSizeActivityInputMatrix"
        android:onClick="onSetButtonClick"
        android:text="@string/button_set_activity_input_matrix" />

    <TextView
        android:id="@+id/textViewCurrentMatrixFieldActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextMatrixSizeActivityInputMatrix"
        android:layout_below="@+id/editTextMatrixSizeActivityInputMatrix"
        android:layout_marginTop="17dp"
        android:text="@string/text_view_current_matrix_field_activity_input_matrix" />

    <Button
        android:id="@+id/buttonNextActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSetActivityInputMatrix"
        android:layout_below="@+id/textViewCurrentMatrixFieldActivityInputMatrix"
        android:enabled="false"
        android:onClick="onNextButtonClick"
        android:text="@string/button_next_activity_input_matrix" />

    <TextView
        android:id="@+id/textViewMatrixSizeActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSetActivityInputMatrix"
        android:layout_alignLeft="@+id/editTextMatrixSizeActivityInputMatrix"
        android:text="@string/text_view_matrix_size_activity_input_matrix" />

    <Button
        android:id="@+id/buttonFinishActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonNextActivityInputMatrix"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/gridViewActivityInputMatrix"
        android:enabled="false"
        android:onClick="onFinishButtonClick"
        android:text="@string/button_finish_activity_input_matrix" />

    <Button
        android:id="@+id/ButtonNextBActivityInputMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/editTextInputVectorActivityInputMatrix"
        android:enabled="false"
        android:onClick="onNextBButtonClick"
        android:text="@string/button_next_activity_input_matrix" />

</RelativeLayout>